Layout & Social Media Updates

--- a/src/app.html
+++ b/src/app.html
@@ -36,6 +36,38 @@
 		  sizes="512x512"
 		  href="/android-chrome-512x512.png" />
 
+	<meta name="description"
+		  content="Cardano meets the Internet of Things - Funded by Project Catalyst Fund 11" />
+
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url"
+		  content="https://cardanothings.io/" />
+	<meta property="og:type"
+		  content="website" />
+	<meta property="og:title"
+		  content="CardanoThings - Cardano has things now." />
+	<meta property="og:description"
+		  content="Cardano meets the Internet of Things - Funded by Project Catalyst Fund 11" />
+	<meta property="og:image"
+		  content="https://cardanothings.io/tw.jpg" />
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card"
+		  content="summary_large_image" />
+	<meta property="twitter:domain"
+		  content="cardanothings.io" />
+	<meta property="twitter:url"
+		  content="https://cardanothings.io/" />
+	<meta name="twitter:title"
+		  content="CardanoThings - Cardano has things now." />
+	<meta name="twitter:description"
+		  content="Cardano meets the Internet of Things - Funded by Project Catalyst Fund 11" />
+	<meta name="twitter:image"
+		  content="https://cardanothings.io/tw.jpg" />
+
+	<meta name="keywords"
+		  content="Cardano, Internet of Things, IoT, Arduino, Blockchain, Tutorials, Workshops, Education, Project Catalyst" />
+
 	%sveltekit.head%
 </head>
 
